2011-08-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c src/stdfn.h:  Make "assert" statements trigger
	int_error() rather than abort(), so that debugging is easier.

2011-08-28  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:  sync to docs version 1.688

2011-08-28  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/plot2d.c (get_data): Revert yesterday's change to this file 
	because it broke stringvar.dem.

2011-08-27  Ethan A Merritt  <merritt@u.washington.edu>

	* PORTING src/makefile.all src/makefile.awc src/term.h configure.vms
	config/config.cyg config/config.dj2 config/config.mgw config/config.nt
	config/config.os2 config/config.oww config/makefile.unx configure.in:
	Remove obsolete mgr terminal driver.  The mgr window system offered a
	terminal sort of like xterm+graphics in the era of Sun3 (i.e. early-mid
	1990s). Source for the mgr server has apparently disappeared from the
	net.  Gnuplot's mgr.trm supported only text and vector commands, so
	even if an operational installation of mgr could be found, features 
	added to gnuplot since about version 3.7 would be irrelevant. Let it go.

2011-08-27  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c (expect_string) src/eval.c src/eval.h docs/gnuplot.doc:
	Add patch #3397007 to complete the support for named columns with the 
	"labels" style. The following now works: 
	    plot 'data' using "A":"B":"labels" with labels
	Update the documentation. 
	
	* src/datafile.c (f_timecolumn) src/plot2d.c:
	Track the current using spec to ensure that the timecolumn function
	gets the right timeformat. (fixes part of bug #3163386)

	* demo/timedat.dem: Remove the relative date demo because it was 
	misleading and incorrect.

	* src/set.c (set_tics): For some options set_tics() 
	didn't act on all axes.
	
	* src/graphics.c (boundary): Fix (?) boundary calculation for 
	"set xtics rotate".

2011-08-25  René Haber  <renehaber@users.sourceforge.net>
